metadata3/objects/telearndaypkg__Financial_Account__c.object
<CustomObject>
<description>test</description>
    <label>Financial Account</label>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>telearndaypkg__Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
	<description>test</description>
    </fields>
    <fields>
        <fullName>telearndaypkg__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
 <description>test</description>
    </fields>
    <fields>
        <fullName>telearndaypkg__Current_Limit__c</fullName>
        <label>Current Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
 <description>test</description>
    </fields>
    <fields>
        <fullName>telearndaypkg__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
 <description>test</description>
    </fields>
    <fields>
        <fullName>telearndaypkg__Expiration_Month__c</fullName>
        <label>Expiration Month</label>
        <length>2</length>
        <type>Text</type>
 <description>test</description>
    </fields>
    <fields>
        <fullName>telearndaypkg__Expiration_Year__c</fullName>
        <label>Expiration Year</label>
        <length>4</length>
        <type>Text</type>
 <description>test</description>
    </fields>
    <fields>
        <fullName>telearndaypkg__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
 <description>test</description>
    </fields>
    <listViews>
        <fullName>telearndaypkg__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>